--- a/src/App.css
+++ b/src/App.css
@@ -36,6 +36,7 @@ h2 {
 }
 .chat-list__item__content {
   flex: 1;
+  position: relative;
 }
 .chat-list__item__content__topBar {
   overflow: hidden;
@@ -53,6 +54,29 @@ h2 {
 .chat-list__item__content__recentMsg {
   font-size: 14px;
   color: #aaa;
+}
+.chat-list__item__content__moreBtn {
+  position: absolute;
+  right: 15px;
+  bottom: 3px;
+  border: 1px solid #aaaaaa;
+  font-size: 10px;
+  padding: 2px;
+}
+.chat-list__item__content__selectBtnCon {
+  width: 40px;
+}
+.chat-list__item__content__selectBtn {
+  width: 20px;
+  height: 20px;
+  margin: 15px auto;
+  border-radius: 50%;
+}
+.selected {
+  background-color: #ff0000;
+}
+.noSelected {
+  background-color: #eeeeee;
 }
 
 .chat-nav {
@@ -77,4 +101,11 @@ h2 {
 .chat-nav__item__name {
   font-size: 12px;
   color: #aaa;
+}
+
+.multipleDeleteBtn {
+  padding: 1px 10px;
+  border: 1px solid #000000;
+  margin: 10px auto 0;
+  width: 35px;
 }
